[package]
name = "aspect-fit"
description = "Scale up a rectangle to be as big as possible while keeping aspect ratio and fitting inside a container rectangle. Based on https://github.com/maxtherocket/aspect-fit."
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/ChocolateLoverRaj/aspect-fit"
keywords = ["rectangle", "scale", "fit", "aspect", "ratio", "max"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num = "0.4.1"
